agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/Agent_Governor_Configuration__c.object-meta.xml
<CustomObject>
    <label>Agent Governor Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Governor Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>