agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Current_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Count__c</fullName>
    <description>System field tracked by the Trigger. Increments on new MessagingSessions.</description>
    <inlineHelpText>(System Field) The number of conversations started today. This resets automatically at midnight based on the Time Zone.</inlineHelpText>
    <label>Current Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>