agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <description>The hard maximum number of conversations allowed per calendar day.</description>
    <inlineHelpText>The maximum number of new conversations allowed per day. Once reached, the Agent is hidden until the next reset.</inlineHelpText>
    <label>Daily Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>