agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/End_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Hour__c</fullName>
    <description>The integer hour (0-23) when traffic is blocked.</description>
    <inlineHelpText>0-23 format. Enter the hour the Agent should hide (e.g., 17 for 5:00 PM).</inlineHelpText>
    <label>End Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>