agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Exclude_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Binary filter to block traffic on Saturday and Sunday. Defaults to off; when checked, a Time Zone is required so the weekend can be evaluated.</description>
    <inlineHelpText>If checked, the Agent is hidden on Saturdays and Sundays, evaluated in the configured Time Zone. You must set a Time Zone for this to take effect.</inlineHelpText>
    <label>Exclude Weekends</label>
    <type>Checkbox</type>
</CustomField>