agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Governor_Key__c.field-meta.xml
<CustomField>
    <fullName>Governor_Key__c</fullName>
    <description>Unique External ID used to map the public website script to this specific Salesforce record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter a unique string (e.g., service-v1). This must match the GOVERNOR_KEY constant defined in your website JavaScript wrapper.</inlineHelpText>
    <label>Governor Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>