agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master On/Off switch for the API. If disabled, the API returns STOP immediately.</description>
    <inlineHelpText>Master switch. If unchecked, the Agent is hidden immediately, ignoring all other rules or limits.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>