agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Is_Green__c.field-meta.xml
<CustomField>
    <fullName>Is_Green__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System flag indicating if the quota is open or exhausted. Logic Engine updates this.</description>
    <inlineHelpText>System flag, managed automatically — do not edit by hand. Checked = quota open. Unchecked = today's Daily Limit has been reached (resets automatically on the next day). To switch the Agent off manually, use the Active checkbox instead.</inlineHelpText>
    <label>Is Green</label>
    <type>Checkbox</type>
</CustomField>