agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Reset_Date__c</fullName>
    <description>Tracks the last date the counter was zeroed out to prevent double-resets.</description>
    <inlineHelpText>(System Field) The date the Daily Limit was last reset. Used by the logic engine to detect a new day.</inlineHelpText>
    <label>Reset Date</label>
    <type>Date</type>
</CustomField>