agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <description>The integer hour (0-23) when traffic is allowed to start.</description>
    <inlineHelpText>0-23 format. The hour the Agent starts showing (e.g., 9 for 9:00 AM). Must be EARLIER than End Hour. Leave both Start and End blank to run at all hours.</inlineHelpText>
    <label>Start Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>