agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>The IANA Time Zone ID used to calculate &quot;Start of Day&quot; and Operating Hours.</description>
    <inlineHelpText>Required. Enter a valid IANA Time Zone ID (e.g., America/New_York or Europe/London). This determines when the &quot;Day&quot; starts and ends.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pacific/Midway</fullName>
            </value>
            <value>
                <fullName>America/Honolulu</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Toronto</fullName>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>America/Argentina/Buenos_Aires</fullName>
            </value>
            <value>
                <fullName>Atlantic/Azores</fullName>
            </value>
            <value>
                <fullName>Europe/London</fullName>
            </value>
            <value>
                <fullName>Europe/Dublin</fullName>
            </value>
            <value>
                <fullName>Europe/Lisbon</fullName>
            </value>
            <value>
                <fullName>Europe/Paris</fullName>
            </value>
            <value>
                <fullName>Europe/Berlin</fullName>
            </value>
            <value>
                <fullName>Europe/Rome</fullName>
            </value>
            <value>
                <fullName>Europe/Amsterdam</fullName>
            </value>
            <value>
                <fullName>Europe/Madrid</fullName>
            </value>
            <value>
                <fullName>Europe/Istanbul</fullName>
            </value>
            <value>
                <fullName>Europe/Moscow</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Asia/Dubai</fullName>
            </value>
            <value>
                <fullName>Asia/Kolkata</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>