agent-governor/force-app/main/default/objects/Agent_Governor_Configuration__c/validationRules/Operating_Hours_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Operating_Hours_Valid</fullName>
    <active>true</active>
    <description>When both hours are set, End must be strictly later than Start. Blocks a transposed pair (e.g. 17 to 9) and an equal pair (9 to 9) that would otherwise fail silently. Overnight windows crossing midnight are not supported.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Start_Hour__c)),
  NOT(ISBLANK(End_Hour__c)),
  End_Hour__c &lt;= Start_Hour__c
)</errorConditionFormula>
    <errorDisplayField>End_Hour__c</errorDisplayField>
    <errorMessage>End Hour must be later than Start Hour (for example, Start 9 and End 17). Overnight windows that cross midnight are not supported. To run at all hours, leave both Start Hour and End Hour blank.</errorMessage>
</ValidationRule>